# trawler

./: .gitignore  README.md  build.gradle.kts  core.jsonld  core.yml  docker-compose.example.yml  docker-compose.yml  gradle.properties  schema.graphql  settings.gradle
.github/workflows/: build.yml
docs/: .gitignore  Architecture.md  Concepts.md  Getting started.md  Quick Start.md  README.md  Why.md  arch.excalidraw  package.json  retype.yml  schema.yml
docs/APIs/: Python.md
docs/Connectors/: Pandas.md  PySpark.md  trawler-agent.md
docs/Integration/: index.yml
docs/Integration/APIs/: JSON-LD.md  Python.md
docs/Integration/Connectors/: Agent.md  Pandas.md  PySpark.md
docs/internal/: DATABASE.md
k8s/: .gitignore
k8s/base/: .env.secret  deployment.yml  kustomization.yml
k8s/overlays/prod/: .env.secret  kustomization.yml
ontology/: build.gradle.kts
proto/: build.gradle.kts
python/: Dockerfile  LICENSE.md  README.md  example.ontology.json  example.yml  ontology.sql  pyproject.toml
python/examples/: simple_graph.py
python/src/trawler/: __init__.py  graph.py  main.py  ontology.py  schema.py
python/src/trawler/agent/: jobs.py  main.py
python/src/trawler/sql/: extract.py  metrics.py
python/src/trawler/src/main/proto/: trawler_pb2.py  trawler_pb2_grpc.py
python/tests/: test_graph.py  test_record.py
server/: build.gradle.kts
terraform/prod/: .terraform.lock.hcl  config.tf  main.tf
ui/: .env  Dockerfile  codegen.yml  craco.config.js  package.json  tailwind.config.js
ui/public/: index.html
ui/src/: App.tsx  ProjectContext.ts  ProjectContext.tsx  graphql.ts  ontology.ts  react-app-env.d.ts  types.d.ts  types.ts  utils.ts
ui/src/components/: Layout.tsx  Search.tsx  Selector.tsx  Tabs.tsx
ui/src/routes/: Dashboard.tsx  Entity.tsx  Graph.tsx  Home.tsx  Ontology.tsx  Settings.tsx  (+1 more)
web/: package.json
web/components/: Features.tsx  Footer.tsx  Hero.tsx  Screenshot.tsx
web/pages/: index.tsx  privacy.tsx
(+137 files in other folders)
