[tool.poetry]
name = "trawler"
version = "0.1.0"
description = ""
authors = ["Alex Sparrow <alex@alexsparrow.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.3"
grpcio = "^1.36.1"
grpcio-tools = "^1.36.1"
SQLAlchemy = "^1.4.17"
psycopg2-binary = "^2.8.6"
sqlparse = "^0.4.1"
click = "^8.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
