[tool.poetry]
name = "trawler-python"
version = "0.0.2-alpha.3"
description = "Trawler is an open source metadata platform for mapping and monitoring your data"
readme = "README.md"
authors = ["Alex Sparrow <alex@alexsparrow.dev>"]
packages = [
    { include = "src/trawler" },
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
SQLAlchemy = {version = "^1.4.17", optional = true }
psycopg2-binary = {version = "^2.9.1", optional = true }
click = "^8.0.1"
requests = "^2.25.1"
schedule = "^1.1.0"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[tool.poetry.extras]
sql = ["SQLAlchemy", "psycopg2-binary"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
trawler = 'trawler.agent.main:main'
